--- a/manager/executeur_taches/CMakeLists.txt
+++ b/manager/executeur_taches/CMakeLists.txt
@@ -148,6 +148,11 @@ add_executable(
   
   src/fake_arTag_server.cpp
 )
+add_executable(
+  test_report
+  
+  src/fake_server_reporting.cpp
+)
 ##set_target_properties(test_exec PROPERTIES COMPILE_FLAGS -std=c++0x) # c++ version 11
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
@@ -176,6 +181,10 @@ target_link_libraries(
 )
 target_link_libraries(
   test_arTag
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(
+  test_report
   ${catkin_LIBRARIES}
 )
 #target_link_libraries(
