--- a/navigation/approche_finale/CMakeLists.txt
+++ b/navigation/approche_finale/CMakeLists.txt
@@ -96,44 +96,23 @@ catkin_package(
 ## Build ##
 ###########
 
-add_executable(finalApproaching_server 
+add_executable(finalApproaching_node 
   src/fa_utils.cpp
   src/laserScan.cpp
   src/Point.cpp
   src/Segment.cpp
+  src/finalApproaching.cpp
   src/finalApproaching_server.cpp)
 
-add_executable(test_fonctions_laser
-	src/test_fonctions_laser.cpp
-	src/laserScan.cpp
-	src/Point.cpp
-	src/Segment.cpp
-	src/fa_utils.cpp)
-
-add_executable(fake_scan_node
-	src/fake_scan_node.cpp)
-	
 target_link_libraries(
-  finalApproaching_server
+  finalApproaching_node
   ${catkin_LIBRARIES}
 )
 
-target_link_libraries(
-  test_fonctions_laser
-  ${catkin_LIBRARIES}
-)
-
-target_link_libraries(
-  fake_scan_node
-  ${catkin_LIBRARIES}
-)
-
-set_target_properties(finalApproaching_server PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
-set_target_properties(fake_scan_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
-set_target_properties(test_fonctions_laser PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
+set_target_properties(finalApproaching_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
 
 add_dependencies(
-  finalApproaching_server
+  finalApproaching_node
   ${manager_msg_EXPORTED_TARGETS}
   manager_msg_gencpp
 )
