--- a/traitement_image/ar_tag/CMakeLists.txt
+++ b/traitement_image/ar_tag/CMakeLists.txt
@@ -80,7 +80,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+#  INCLUDE_DIRS include
 #  LIBRARIES ar_tag
   CATKIN_DEPENDS roscpp rospy ar_track_alvar
 #  DEPENDS system_lib
