--- a/communication/refbox_comm/package.xml
+++ b/communication/refbox_comm/package.xml
@@ -11,7 +11,7 @@
   <license>TODO</license>
 
   <url>http://ros.org/wiki/refbox_comm</url>
-  
+
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -20,7 +20,8 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>tf</build_depend>
-  
+  <build_depend>comm_msg</build_depend>
+
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -29,11 +30,10 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>tf</run_depend>
-    
+  <run_depend>comm_msg</run_depend>
+
   <export>
 <!--    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/> -->
   </export>
 
 </package>
-
-
