--- a/manager/executeur_taches/package.xml
+++ b/manager/executeur_taches/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The executeur_taches package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="sandra@todo.todo">Sandra</maintainer>
@@ -46,12 +46,14 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>manager_msg</build_depend>
+  <build_depend>comm_msg</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>manager_msg</run_depend>
+  <run_depend>comm_msg</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
