--- a/messages/trait_im_msg/CMakeLists.txt
+++ b/messages/trait_im_msg/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   actionlib
 	message_generation
+	comm_msg
+	geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,8 +49,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    	FILES
-   	LightSpec.msg
-    LightSignal.msg
+	LightSignal.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -69,6 +70,8 @@ generate_messages(
 	DEPENDENCIES
   	std_msgs
     actionlib
+	comm_msg
+	geometry_msgs
 )
 
 ###################################
