--- a/messages/trait_im_msg/package.xml
+++ b/messages/trait_im_msg/package.xml
@@ -2,12 +2,12 @@
 <package>
   <name>trait_im_msg</name>
   <version>0.0.0</version>
-  <description> 
+  <description>
     Package de messages/services/action pour traitement d'image de la Robocup Logistic League
     Equipe PYRO (PolYtech RObocup team)
   </description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="valentin.vergez@polytech-lille.net">Valentin Vergez</maintainer>
@@ -42,11 +42,12 @@
 
   <!-- Use build_depend for packages you need at compile time: -->
   <build_depend>message_generation</build_depend>
+  <build_depend>comm_msg</build_depend>
 
   <!-- Use run_depend for packages you need at runtime: -->
   <run_depend>message_runtime</run_depend>
+  <run_depend>comm_msg</run_depend>
 
-  
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
 
