--- a/hardware/gripper/package.xml
+++ b/hardware/gripper/package.xml
@@ -50,9 +50,10 @@
 
   <build_depend>rosserial_client</build_depend>
   <build_depend>rosserial_arduino</build_depend>
-  
+
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
 
 
   <run_depend>actionlib</run_depend>
@@ -70,6 +71,7 @@
 
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
