--- a/communication/refbox_comm/cfg/config.yaml
+++ b/communication/refbox_comm/cfg/config.yaml
@@ -15,34 +15,34 @@ llsfrb:
     protobuf-dirs: ["@BASEDIR@/src/msgs"]
 
     public-peer:
-      #host: !ipv4 172.26.255.255
-      #host: !ipv4 192.168.10.255
-      host: !ipv4 127.0.0.255
-      #port: !udp-port 4444
-      send-port: !udp-port 4444
-      recv-port: !udp-port 4445
+      host: !ipv4 172.26.255.255
+    #   host: !ipv4 192.168.10.255
+    #   host: !ipv4 127.0.0.255
+      port: !udp-port 4444
+    #   send-port: !udp-port 4444
+    #   recv-port: !udp-port 4445
 
     cyan-peer:
-      #host: !ipv4 172.26.255.255
+      host: !ipv4 172.26.255.255
       #host: !ipv4 192.168.10.255
-      host: !ipv4 127.0.0.255
-      #port: !udp-port 4441
-      send-port: !udp-port 4441
-      recv-port: !udp-port 4446
+    #   host: !ipv4 127.0.0.255
+      port: !udp-port 4441
+    #   send-port: !udp-port 4441
+    #   recv-port: !udp-port 4446
 
     magenta-peer:
-      #host: !ipv4 172.26.255.255
+      host: !ipv4 172.26.255.255
       #host: !ipv4 192.168.10.255
-      host: !ipv4 127.0.0.255
-      #port: !udp-port 4442
-      send-port: !udp-port 4442
-      recv-port: !udp-port 4447
+    #   host: !ipv4 127.0.0.255
+      port: !udp-port 4442
+    #   send-port: !udp-port 4442
+    #   recv-port: !udp-port 4447
 
   game:
-    team: PYRO
-    color: cyan
+    team: Pyro
+    color: magenta
     robot_number: 1
     robot_name: R1
 
     crypto-keys:
-      PYRO : B4C9a
+      PYRO : NnCuCFQH
