--- a/common/common_utils/CMakeLists.txt
+++ b/common/common_utils/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   occupancy_grid_utils
   deplacement_msg
   tf
+
 )
 
 ## System dependencies are found with CMake's conventions
@@ -106,7 +107,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include include/common_utils
   LIBRARIES common_utils
-  CATKIN_DEPENDS roscpp rospy std_msgs
+  CATKIN_DEPENDS roscpp rospy std_msgs tf occupancy_grid_utils
 #  DEPENDS system_lib
 )
 
@@ -142,14 +143,23 @@ set_target_properties(common_utils PROPERTIES COMPILE_FLAGS "-std=c++11")
 #set_target_properties(common_utils PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 ## Declare a C++ executable
-# add_executable(common_utils_node src/common_utils_node.cpp)
+# add_executable(zoneSizeCalcul_node src/zoneSizeCalcul_node.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(common_utils_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(zoneSizeCalcul_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(common_utils
+    ${catkin_LIBRARIES}
+)
+
+add_executable(zoneSizeCalcul_node src/zoneSizeCalcul_node.cpp)
+
+add_dependencies(zoneSizeCalcul_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+set_target_properties(zoneSizeCalcul_node PROPERTIES COMPILE_FLAGS "-std=c++11")
+target_link_libraries(zoneSizeCalcul_node
+    common_utils
     ${catkin_LIBRARIES}
 )
 
